Bug 249592 - Functionality in the third submenu cannot be reached (e.g. reply to an email)
Summary: Functionality in the third submenu cannot be reached (e.g. reply to an email)
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: VHI critical
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks: 251538
  Show dependency treegraph
 
Reported: 2010-08-31 09:57 UTC by Bernhard E. Reiter
Modified: 2010-10-02 00:36 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard E. Reiter 2010-08-31 09:57:23 UTC
N900 kdepim-mobile         4:4.5~20100827.1168757-1maemo1.1169941
libqt4-experimental-gui    4.7.0~git20100824-0maemo1

If you are viewing an email, the Action "flap" gets you a menu
and "Email" -> "Reply" does not work.
(Because it is not displaying the third menu level.)

This renders all actions on the third menu level to be inaccessible.
Comment 1 András Manţia 2010-08-31 14:17:24 UTC
SVN commit 1170272 by amantia:

Make Reply/Forward/Mark As actions work again. Now it is according to http://techbase.kde.org/Projects/KDE_PIM/Development/Mobile/KMail_FunctionalScope . Click on Reply: smart reply. Long press: a dialog with reply options. Same for Forward.

BUG: 249592


 M  +15 -11    KMailActions.qml  
 M  +0 -2      composerview.cpp  
 M  +161 -0    kmail-mobile.qml  
 M  +0 -5      mainview.cpp  
 M  +4 -6      mainview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1170272
Comment 2 Sabine Faure 2010-09-01 21:11:27 UTC
I tested that today and it works fine now.

To get to the 'Reply' button when viewing an email: open the Actions tab, click on 'Email' and then on 'Reply'.

N900, 4:4.5~20100901.1170574-1maemo1.1170522
Comment 3 Felix Wolfsteller 2010-09-07 13:32:44 UTC
In version 4:4.5~20100903.1171290-1maemo1.1171237:

Touching the Reply button shortly seems to do nothing (maybe it actually just takes very long). Touching it "long" brings the described menu.

This would be the first place where touching a button "long" does something different than when touching it shortly. The user might not be aware of this option.

Besides, in combination with https://bugs.kde.org/show_bug.cgi?id=249905 (application crashes when touched too long) it is rather difficult to test in the given version.
Comment 4 Bernhard E. Reiter 2010-09-15 09:24:41 UTC
N900 4:4.5~20100910.1175159-1maemo3.1174786
Actions -> Email -> Reply 
shortly touched to not lead to a reply. No composer opened.

Long touched do lead to a choice of four options, 
but again using "reply" does not lead to a composer.
(Or lead to a crash on some occasions.)

Console output:
When selecting the Email menu, I see:
Triggered was: email_menu
file:///usr/lib/kde4/imports/org/kde/pim/mobileui/ActionListItem.qml:28:11: Unable to assign undefined value

Pressing "reply" gives my feedback that the button was activated,
but nothing in the console output.
Comment 5 Stephen Kelly 2010-09-16 16:56:55 UTC
Fixed in yesterdays changes.
Comment 6 Sabine Faure 2010-09-16 21:46:29 UTC
I retested this today.

* A short touch opens the composer and displays as it should: 
'On Day Date Month Year Time you wrote: 
> initial message' 

* A long touch displays 4 buttons: Reply to Author, Reply to All, Reply to List and Discard

To test the 4 buttons I have sent an email to the N900 with 3 recipients: my Imap account on the N900, my KDAB email address, a list address.

Here are the results:

- 'Reply to Author' button works fine (composer launched and 1st recipient displayed correctly in Recipients tab)
- 'Reply to All' button does not work completely (composer launched but incorrect recipient: list email address only)
-'Reply to List' button does not work correctly (composer launched but no recipient at all)
- 'Discard' button works fine (it undisplays the 4 buttons)

Since there are pbs with the recipients in the replies I am reopening this bug.

N900, 4:4.5~20100916.1175939-1maemo1.1174921
Comment 7 Bjoern Ricks 2010-09-17 09:15:20 UTC
Hi Sabine,

I created a new issue for your report because imho it's a completely new one
https://bugs.kde.org/show_bug.cgi?id=249592
Comment 8 Bjoern Ricks 2010-09-17 09:20:28 UTC
(In reply to comment #7)
> Hi Sabine,
> 
> I created a new issue for your report because imho it's a completely new one
> https://bugs.kde.org/show_bug.cgi?id=249592
The new issue report is bug https://bugs.kde.org/show_bug.cgi?id=251538
Comment 9 Sabine Faure 2010-09-17 21:10:56 UTC
Hi Bjoern!

Indeed, you're right. It's a different issue.

Thx for creating a new one.

I am verifying this one since reply to email is easily reached now.
Comment 10 Felix Wolfsteller 2010-09-20 12:41:58 UTC
Are there any other 3 level menues besides reply/forward/mark as (also in other applications)?