Make Reply/Forward/Mark As actions work again. Now it is according to http://techbase.kde.org/Projects/KDE_PIM/Development/Mobile/KMail_FunctionalScope . Click on Reply: smart reply. Long press: a dialog with reply options. Same for Forward.

BUG: 249592

svn path=/trunk/KDE/kdepim/mobile/; revision=1170272